# the_shape_of_data

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
convert/: AnsiColor.hpp  CMakeLists.txt  Flags.cpp  Flags.hpp  README.md  bitstream.hpp  flags.cpp  flags.hpp  huffman.cpp  huffman.hpp  main.cpp  pipeline.cpp  pipeline.hpp  sysconfig.h.cmake  target.cpp  utils.hpp
examples/colorkey/: CMakeLists.txt  main.cpp
examples/ppm/: CMakeLists.txt  main.cpp  sample_bg.ppm
examples/rle/: CMakeLists.txt  main.cpp  sample_fg.ppm  sample_fg.ppm.huffman  sample_fg.ppm.rle.bak
examples/snake/: CMakeLists.txt  main.cpp
sgfx/: CMakeLists.txt
sgfx/examples/ppm/: CMakeLists.txt
sgfx/examples/rle/: main.cpp
sgfx/include/sgfx/: canvas.hpp  color.hpp  image.hpp  ppm.hpp  primitive_types.hpp  widget.hpp
sgfx/sgfx/: CMakeLists.txt
sgfx/src/: image.cpp  ppm.cpp
sgfx_glfw/sgfx/examples/ppm/: main.cpp
sgfx_glfw/sgfx/sgfx/include/sgfx/: image.hpp  primitive_types.hpp
